@@ -33,7 +33,11 @@ svn trunk
 * When using ``paster create`` and inserting text with a ``-*-``
   marker, multi-line text will no longer be reinserted.
 
-* Improved output when skipping templates with ``paster create``
+* Improved output when skipping templates with ``paster create``.
+
+* When starting a server with ``paster serve --daemon`` and the pid
+  file exists and describes a running process, do not start another
+  process.
 
 1.3.6
 -----
